--- a/pom.xml
+++ b/pom.xml
@@ -97,5 +97,11 @@
             <artifactId>assertj-core</artifactId>
             <version>3.19.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
