--- a/pom.xml
+++ b/pom.xml
@@ -103,5 +103,11 @@
             <version>2.13.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.3.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
