--- a/pom.xml
+++ b/pom.xml
@@ -109,5 +109,10 @@
             <version>4.3.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 </project>
